--- a/A3/P2-L3.md
+++ b/A3/P2-L3.md
@@ -26,7 +26,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | M. G. MARIO | <!--enlace-->                                                           |
 | N. . DARIA | <!--enlace-->                                                           |
 | O. J. MARCOS | <!--enlace-->                                                           |
-| P. S. JESÚS | <!--enlace-->                                                           |
+| P. S. JESÚS | https://github.com/Jpasan03/practicas-ISE/blob/main/P2-L3.docx                                                         |
 | P. T. GERARDO | <!--enlace-->                                                           |
 | P. D. PAOLO |https://github.com/paolopuga/practicas-ISE/blob/main/P2-L3-resultados.md|
 | R. B. CLAUDIO | <!--enlace-->                                                           |
