--- a/A3/P1-L3.md
+++ b/A3/P1-L3.md
@@ -24,7 +24,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | M. M. JAVIER | https://github.com/jminmol/practicas-ISE/blob/main/P1-L3-resultados.md                                                           |
 | M. R. JUAN CARLOS | <!--enlace-->                                                           |
 | M. G. MARIO | https://github.com/Mariomugu/practicas-ISE/tree/main/P1-L3                                                           |
-| N. . DARIA | <!--enlace-->                                                           |
+| N. . DARIA | https://github.com/darian-ugr/practicas_ise/blob/main/P1L3_resultados.md                                                           |
 | O. J. MARCOS | <!--enlace-->                                                           |
 | P. S. JESÚS | https://github.com/Jpasan03/practicas-ISE/blob/main/P1-L3-resultados.md                                                           |
 | P. T. GERARDO | https://github.com/Gerardoo280/practicasISE/blob/main/P1-L3-resultados.md  |
