--- a/A3/P3-L2.md
+++ b/A3/P3-L2.md
@@ -27,7 +27,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | N. . DARIA | <!--enlace-->                                                           |
 | O. J. MARCOS | <!--enlace-->                                                           |
 | P. S. JESÚS | <!--enlace-->                                                           |
-| P. T. GERARDO | <!--enlace-->                                                           |
+| P. T. GERARDO |https://github.com/Gerardoo280/practicasISE/blob/main/P3-L2%20resultados.md |
 | P. D. PAOLO | https://github.com/paolopuga/practicas-ISE/blob/main/P3-L2-resultados.md|
 | R. B. CLAUDIO | <!--enlace-->                                                           |
 | R. F. JOSE | <!--enlace-->                                                           |
