--- a/A3/P2-L3.md
+++ b/A3/P2-L3.md
@@ -13,7 +13,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | G. D. CÉSAR BAUTISTA | https://github.com/cgardia1409/practicas-ISE/blob/master/P2-L3-resultados.md                                                          |
 | G. R. JORGE | https://github.com/jrgeegr/practicas-ISE/tree/main/P2-L3                                                           |
 | G. N. ANDRES | <!--enlace-->                                                           |
-| G. M. JOSÉ MARÍA | <!--enlace-->                                                           |
+| G. M. JOSÉ MARÍA | https://github.com/Josemgomo/practicas-ISE/blob/main/P2-L3-resultados.md                                                         |
 | J. D. ALEJANDRO | <!--enlace-->https://github.com/SCR4T3/practicas-ISE/blob/main/P2-L3-resultados.md                                                           |
 | L. F. MARCOS | <!--enlace-->                                                           |
 | M. P. IGNACIO | https://github.com/Redstarck/practicas-ISE/blob/main/P2-L3-resultados.md |
